added product page

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,700,800" rel="stylesheet">
+    <link rel="stylesheet" href="%PUBLIC_URL%/react-input-range.css" media="screen" title="no title" charset="utf-8">
     <title>Jado Pado Test</title>
   </head>
   <body>
